--- a/data/smosh.html
+++ b/data/smosh.html
@@ -40,38 +40,38 @@ body {
      <tr>     	<td> 07 May 2006 </td>         <td> 2060 </td>     </tr>
      <tr>     	<td> 14 May 2006 </td>         <td> 2732 </td>     </tr>
      <tr>     	<td> 21 May 2006 </td>         <td> 3541 </td>     </tr>
-     <tr>     	<td> 28 May 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 04 Jun 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 11 Jun 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 18 Jun 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 25 Jun 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 02 Jul 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 09 Jul 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 16 Jul 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 23 Jul 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 30 Jul 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 06 Aug 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 13 Aug 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 20 Aug 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 27 Aug 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 03 Sep 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 10 Sep 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 17 Sep 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 24 Sep 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 01 Oct 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 08 Oct 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 15 Oct 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 22 Oct 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 29 Oct 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 05 Nov 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 12 Nov 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 19 Nov 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 26 Nov 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 03 Dec 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 10 Dec 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 17 Dec 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 24 Dec 2006 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 31 Dec 2006 </td>         <td> Insert </td>     </tr>
+     <tr>     	<td> 28 May 2006 </td>         <td> 4209 </td>     </tr>
+     <tr>     	<td> 04 Jun 2006 </td>         <td> 4969 </td>     </tr>
+     <tr>     	<td> 11 Jun 2006 </td>         <td> 5709 </td>     </tr>
+     <tr>     	<td> 18 Jun 2006 </td>         <td> 6637 </td>     </tr>
+     <tr>     	<td> 25 Jun 2006 </td>         <td> 7906 </td>     </tr>
+     <tr>     	<td> 02 Jul 2006 </td>         <td> 8999 </td>     </tr>
+     <tr>     	<td> 09 Jul 2006 </td>         <td> 10,174 </td>     </tr>
+     <tr>     	<td> 16 Jul 2006 </td>         <td> 11,144 </td>     </tr>
+     <tr>     	<td> 23 Jul 2006 </td>         <td> 11,895 </td>     </tr>
+     <tr>     	<td> 30 Jul 2006 </td>         <td> 13,108 </td>     </tr>
+     <tr>     	<td> 06 Aug 2006 </td>         <td> 14,356 </td>     </tr>
+     <tr>     	<td> 13 Aug 2006 </td>         <td> 15,071 </td>     </tr>
+     <tr>     	<td> 20 Aug 2006 </td>         <td> 15,751 </td>     </tr>
+     <tr>     	<td> 27 Aug 2006 </td>         <td> 16,876 </td>     </tr>
+     <tr>     	<td> 03 Sep 2006 </td>         <td> 17,556 </td>     </tr>
+     <tr>     	<td> 10 Sep 2006 </td>         <td> 18,326 </td>     </tr>
+     <tr>     	<td> 17 Sep 2006 </td>         <td> 19,108 </td>     </tr>
+     <tr>     	<td> 24 Sep 2006 </td>         <td> 19,985 </td>     </tr>
+     <tr>     	<td> 01 Oct 2006 </td>         <td> 21,256 </td>     </tr>
+     <tr>     	<td> 08 Oct 2006 </td>         <td> 22,797 </td>     </tr>
+     <tr>     	<td> 15 Oct 2006 </td>         <td> 23,997 </td>     </tr>
+     <tr>     	<td> 22 Oct 2006 </td>         <td> 25,050 </td>     </tr>
+     <tr>     	<td> 29 Oct 2006 </td>         <td> 26,256 </td>     </tr>
+     <tr>     	<td> 05 Nov 2006 </td>         <td> 27,106 </td>     </tr>
+     <tr>     	<td> 12 Nov 2006 </td>         <td> 28,191 </td>     </tr>
+     <tr>     	<td> 19 Nov 2006 </td>         <td> 31,124 </td>     </tr>
+     <tr>     	<td> 26 Nov 2006 </td>         <td> 32,330 </td>     </tr>
+     <tr>     	<td> 03 Dec 2006 </td>         <td> 33,279 </td>     </tr>
+     <tr>     	<td> 10 Dec 2006 </td>         <td> 34,643 </td>     </tr>
+     <tr>     	<td> 17 Dec 2006 </td>         <td> 35,824 </td>     </tr>
+     <tr>     	<td> 24 Dec 2006 </td>         <td> 37,037 </td>     </tr>
+     <tr>     	<td> 31 Dec 2006 </td>         <td> 37,952 </td>     </tr>
      <tr>     	<td> 07 Jan 2007 </td>         <td> Insert </td>     </tr>
      <tr>     	<td> 14 Jan 2007 </td>         <td> Insert </td>     </tr>
      <tr>     	<td> 21 Jan 2007 </td>         <td> Insert </td>     </tr>
@@ -263,3 +263,5 @@ body {
 
 </body>
 </html>
+
+
