--- a/data/smosh.html
+++ b/data/smosh.html
@@ -72,26 +72,26 @@ body {
      <tr>     	<td> 17 Dec 2006 </td>         <td> 35,824 </td>     </tr>
      <tr>     	<td> 24 Dec 2006 </td>         <td> 37,037 </td>     </tr>
      <tr>     	<td> 31 Dec 2006 </td>         <td> 37,952 </td>     </tr>
-     <tr>     	<td> 07 Jan 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 14 Jan 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 21 Jan 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 28 Jan 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 04 Feb 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 11 Feb 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 18 Feb 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 25 Feb 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 04 Mar 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 11 Mar 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 18 Mar 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 25 Mar 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 01 Apr 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 08 Apr 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 15 Apr 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 22 Apr 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 29 Apr 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 06 May 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 13 May 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 20 May 2007 </td>         <td> Insert </td>     </tr>
+     <tr>     	<td> 07 Jan 2007 </td>         <td> 39,853 </td>     </tr>
+     <tr>     	<td> 14 Jan 2007 </td>         <td> 41,910 </td>     </tr>
+     <tr>     	<td> 21 Jan 2007 </td>         <td> 44,183 </td>     </tr>
+     <tr>     	<td> 28 Jan 2007 </td>         <td> 47,308 </td>     </tr>
+     <tr>     	<td> 04 Feb 2007 </td>         <td> 50,371 </td>     </tr>
+     <tr>     	<td> 11 Feb 2007 </td>         <td> 53,847 </td>     </tr>
+     <tr>     	<td> 18 Feb 2007 </td>         <td> 56,053 </td>     </tr>
+     <tr>     	<td> 25 Feb 2007 </td>         <td> 58,670 </td>     </tr>
+     <tr>     	<td> 04 Mar 2007 </td>         <td> 61,463 </td>     </tr>
+     <tr>     	<td> 11 Mar 2007 </td>         <td> 64,145 </td>     </tr>
+     <tr>     	<td> 18 Mar 2007 </td>         <td> 66,348 </td>     </tr>
+     <tr>     	<td> 25 Mar 2007 </td>         <td> 70,559 </td>     </tr>
+     <tr>     	<td> 01 Apr 2007 </td>         <td> 74,381 </td>     </tr>
+     <tr>     	<td> 08 Apr 2007 </td>         <td> 79,104 </td>     </tr>
+     <tr>     	<td> 15 Apr 2007 </td>         <td> 85,607 </td>     </tr>
+     <tr>     	<td> 22 Apr 2007 </td>         <td> 89,423 </td>     </tr>
+     <tr>     	<td> 29 Apr 2007 </td>         <td> 93,085 </td>     </tr>
+     <tr>     	<td> 06 May 2007 </td>         <td> 96,158 </td>     </tr>
+     <tr>     	<td> 13 May 2007 </td>         <td> 99,792 </td>     </tr>
+     <tr>     	<td> 20 May 2007 </td>         <td> 103,237 </td>     </tr>
      <tr>     	<td> 27 May 2007 </td>         <td> Insert </td>     </tr>
      <tr>     	<td> 03 Jun 2007 </td>         <td> Insert </td>     </tr>
      <tr>     	<td> 10 Jun 2007 </td>         <td> Insert </td>     </tr>
