--- a/data/smosh.html
+++ b/data/smosh.html
@@ -92,11 +92,11 @@ body {
      <tr>     	<td> 06 May 2007 </td>         <td> 96,158 </td>     </tr>
      <tr>     	<td> 13 May 2007 </td>         <td> 99,792 </td>     </tr>
      <tr>     	<td> 20 May 2007 </td>         <td> 103,237 </td>     </tr>
-     <tr>     	<td> 27 May 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 03 Jun 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 10 Jun 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 17 Jun 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 24 Jun 2007 </td>         <td> Insert </td>     </tr>
+     <tr>     	<td> 27 May 2007 </td>         <td> 106,559 </td>     </tr>
+     <tr>     	<td> 03 Jun 2007 </td>         <td> 111,874 </td>     </tr>
+     <tr>     	<td> 10 Jun 2007 </td>         <td> 116,306 </td>     </tr>
+     <tr>     	<td> 17 Jun 2007 </td>         <td> 120,275 </td>     </tr>
+     <tr>     	<td> 24 Jun 2007 </td>         <td> 124,169 </td>     </tr>
      <tr>     	<td> 01 Jul 2007 </td>         <td> Insert </td>     </tr>
      <tr>     	<td> 08 Jul 2007 </td>         <td> Insert </td>     </tr>
      <tr>     	<td> 15 Jul 2007 </td>         <td> Insert </td>     </tr>
