--- a/data/smosh.html
+++ b/data/smosh.html
@@ -97,33 +97,33 @@ body {
      <tr>     	<td> 10 Jun 2007 </td>         <td> 116,306 </td>     </tr>
      <tr>     	<td> 17 Jun 2007 </td>         <td> 120,275 </td>     </tr>
      <tr>     	<td> 24 Jun 2007 </td>         <td> 124,169 </td>     </tr>
-     <tr>     	<td> 01 Jul 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 08 Jul 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 15 Jul 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 22 Jul 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 29 Jul 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 05 Aug 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 12 Aug 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 19 Aug 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 26 Aug 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 02 Sep 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 09 Sep 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 16 Sep 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 23 Sep 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 30 Sep 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 07 Oct 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 14 Oct 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 21 Oct 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 28 Oct 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 04 Nov 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 11 Nov 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 18 Nov 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 25 Nov 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 02 Dec 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 09 Dec 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 16 Dec 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 23 Dec 2007 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 30 Dec 2007 </td>         <td> Insert </td>     </tr>
+     <tr>     	<td> 01 Jul 2007 </td>         <td> 127,551 </td>     </tr>
+     <tr>     	<td> 08 Jul 2007 </td>         <td> 130,879 </td>     </tr>
+     <tr>     	<td> 15 Jul 2007 </td>         <td> 137,106 </td>     </tr>
+     <tr>     	<td> 22 Jul 2007 </td>         <td> 142,025 </td>     </tr>
+     <tr>     	<td> 29 Jul 2007 </td>         <td> 145,457 </td>     </tr>
+     <tr>     	<td> 05 Aug 2007 </td>         <td> 148,992 </td>     </tr>
+     <tr>     	<td> 12 Aug 2007 </td>         <td> 152,455 </td>     </tr>
+     <tr>     	<td> 19 Aug 2007 </td>         <td> 155,412 </td>     </tr>
+     <tr>     	<td> 26 Aug 2007 </td>         <td> 158,501 </td>     </tr>
+     <tr>     	<td> 02 Sep 2007 </td>         <td> 161,903 </td>     </tr>
+     <tr>     	<td> 09 Sep 2007 </td>         <td> 165,023 </td>     </tr>
+     <tr>     	<td> 16 Sep 2007 </td>         <td> 167,679 </td>     </tr>
+     <tr>     	<td> 23 Sep 2007 </td>         <td> 170,589 </td>     </tr>
+     <tr>     	<td> 30 Sep 2007 </td>         <td> 173,365 </td>     </tr>
+     <tr>     	<td> 07 Oct 2007 </td>         <td> 175,885 </td>     </tr>
+     <tr>     	<td> 14 Oct 2007 </td>         <td> 178,164 </td>     </tr>
+     <tr>     	<td> 21 Oct 2007 </td>         <td> 180,894 </td>     </tr>
+     <tr>     	<td> 28 Oct 2007 </td>         <td> 183,890 </td>     </tr>
+     <tr>     	<td> 04 Nov 2007 </td>         <td> 187,091 </td>     </tr>
+     <tr>     	<td> 11 Nov 2007 </td>         <td> 190,175 </td>     </tr>
+     <tr>     	<td> 18 Nov 2007 </td>         <td> 194,001 </td>     </tr>
+     <tr>     	<td> 25 Nov 2007 </td>         <td> 198,470 </td>     </tr>
+     <tr>     	<td> 02 Dec 2007 </td>         <td> 202,190 </td>     </tr>
+     <tr>     	<td> 09 Dec 2007 </td>         <td> 206,029 </td>     </tr>
+     <tr>     	<td> 16 Dec 2007 </td>         <td> 210,313 </td>     </tr>
+     <tr>     	<td> 23 Dec 2007 </td>         <td> 214,478 </td>     </tr>
+     <tr>     	<td> 30 Dec 2007 </td>         <td> 218,541 </td>     </tr>
      <tr>     	<td> 06 Jan 2008 </td>         <td> Insert </td>     </tr>
      <tr>     	<td> 13 Jan 2008 </td>         <td> Insert </td>     </tr>
      <tr>     	<td> 20 Jan 2008 </td>         <td> Insert </td>     </tr>
