--- a/data/smosh.html
+++ b/data/smosh.html
@@ -124,100 +124,100 @@ body {
      <tr>     	<td> 16 Dec 2007 </td>         <td> 210,313 </td>     </tr>
      <tr>     	<td> 23 Dec 2007 </td>         <td> 214,478 </td>     </tr>
      <tr>     	<td> 30 Dec 2007 </td>         <td> 218,541 </td>     </tr>
-     <tr>     	<td> 06 Jan 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 13 Jan 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 20 Jan 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 27 Jan 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 03 Feb 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 10 Feb 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 17 Feb 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 24 Feb 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 02 Mar 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 09 Mar 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 16 Mar 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 23 Mar 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 30 Mar 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 06 Apr 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 13 Apr 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 20 Apr 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 27 Apr 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 04 May 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 11 May 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 18 May 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 25 May 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 01 Jun 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 08 Jun 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 15 Jun 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 22 Jun 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 29 Jun 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 06 Jul 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 13 Jul 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 20 Jul 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 27 Jul 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 03 Aug 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 10 Aug 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 17 Aug 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 24 Aug 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 31 Aug 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 07 Sep 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 14 Sep 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 21 Sep 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 28 Sep 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 05 Oct 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 12 Oct 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 19 Oct 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 26 Oct 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 02 Nov 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 09 Nov 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 16 Nov 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 23 Nov 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 30 Nov 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 07 Dec 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 14 Dec 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 21 Dec 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 28 Dec 2008 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 04 Jan 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 11 Jan 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 18 Jan 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 25 Jan 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 01 Feb 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 08 Feb 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 15 Feb 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 22 Feb 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 01 Mar 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 08 Mar 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 15 Mar 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 22 Mar 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 29 Mar 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 05 Apr 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 12 Apr 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 19 Apr 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 26 Apr 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 03 May 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 10 May 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 17 May 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 24 May 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 31 May 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 07 Jun 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 14 Jun 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 21 Jun 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 28 Jun 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 05 Jul 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 12 Jul 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 19 Jul 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 26 Jul 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 02 Aug 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 09 Aug 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 16 Aug 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 23 Aug 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 30 Aug 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 06 Sep 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 13 Sep 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 20 Sep 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 27 Sep 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 04 Oct 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 11 Oct 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 18 Oct 2009 </td>         <td> Insert </td>     </tr>
+     <tr>     	<td> 06 Jan 2008 </td>         <td> 222,425 </td>     </tr>
+     <tr>     	<td> 13 Jan 2008 </td>         <td> 228,517 </td>     </tr>
+     <tr>     	<td> 20 Jan 2008 </td>         <td> 234,098 </td>     </tr>
+     <tr>     	<td> 27 Jan 2008 </td>         <td> 239,288 </td>     </tr>
+     <tr>     	<td> 03 Feb 2008 </td>         <td> 245,841 </td>     </tr>
+     <tr>     	<td> 10 Feb 2008 </td>         <td> 253,118 </td>     </tr>
+     <tr>     	<td> 17 Feb 2008 </td>         <td> 258,544 </td>     </tr>
+     <tr>     	<td> 24 Feb 2008 </td>         <td> 267,842 </td>     </tr>
+     <tr>     	<td> 02 Mar 2008 </td>         <td> 273,628 </td>     </tr>
+     <tr>     	<td> 09 Mar 2008 </td>         <td> 282,155 </td>     </tr>
+     <tr>     	<td> 16 Mar 2008 </td>         <td> 289,636 </td>     </tr>
+     <tr>     	<td> 23 Mar 2008 </td>         <td> 296,642 </td>     </tr>
+     <tr>     	<td> 30 Mar 2008 </td>         <td> 307,538 </td>     </tr>
+     <tr>     	<td> 06 Apr 2008 </td>         <td> 315,504 </td>     </tr>
+     <tr>     	<td> 13 Apr 2008 </td>         <td> 323,892 </td>     </tr>
+     <tr>     	<td> 20 Apr 2008 </td>         <td> 332,364 </td>     </tr>
+     <tr>     	<td> 27 Apr 2008 </td>         <td> 340,850 </td>     </tr>
+     <tr>     	<td> 04 May 2008 </td>         <td> 347,788 </td>     </tr>
+     <tr>     	<td> 11 May 2008 </td>         <td> 357,316 </td>     </tr>
+     <tr>     	<td> 18 May 2008 </td>         <td> 365,111 </td>     </tr>
+     <tr>     	<td> 25 May 2008 </td>         <td> 369,862 </td>     </tr>
+     <tr>     	<td> 01 Jun 2008 </td>         <td> 378,147 </td>     </tr>
+     <tr>     	<td> 08 Jun 2008 </td>         <td> 385,008 </td>     </tr>
+     <tr>     	<td> 15 Jun 2008 </td>         <td> 392,229 </td>     </tr>
+     <tr>     	<td> 22 Jun 2008 </td>         <td> 401,350 </td>     </tr>
+     <tr>     	<td> 29 Jun 2008 </td>         <td> 410,641 </td>     </tr>
+     <tr>     	<td> 06 Jul 2008 </td>         <td> 419,541 </td>     </tr>
+     <tr>     	<td> 13 Jul 2008 </td>         <td> 427,526 </td>     </tr>
+     <tr>     	<td> 20 Jul 2008 </td>         <td> 435,256 </td>     </tr>
+     <tr>     	<td> 27 Jul 2008 </td>         <td> 445,084 </td>     </tr>
+     <tr>     	<td> 03 Aug 2008 </td>         <td> 458,026 </td>     </tr>
+     <tr>     	<td> 10 Aug 2008 </td>         <td> 468,478 </td>     </tr>
+     <tr>     	<td> 17 Aug 2008 </td>         <td> 477,351 </td>     </tr>
+     <tr>     	<td> 24 Aug 2008 </td>         <td> 489,268 </td>     </tr>
+     <tr>     	<td> 31 Aug 2008 </td>         <td> 499,500 </td>     </tr>
+     <tr>     	<td> 07 Sep 2008 </td>         <td> 508,311 </td>     </tr>
+     <tr>     	<td> 14 Sep 2008 </td>         <td> 515,415 </td>     </tr>
+     <tr>     	<td> 21 Sep 2008 </td>         <td> 525,240 </td>     </tr>
+     <tr>     	<td> 28 Sep 2008 </td>         <td> 538,249 </td>     </tr>
+     <tr>     	<td> 05 Oct 2008 </td>         <td> 550,019 </td>     </tr>
+     <tr>     	<td> 12 Oct 2008 </td>         <td> 563,005 </td>     </tr>
+     <tr>     	<td> 19 Oct 2008 </td>         <td> 571,729 </td>     </tr>
+     <tr>     	<td> 26 Oct 2008 </td>         <td> 578,727 </td>     </tr>
+     <tr>     	<td> 02 Nov 2008 </td>         <td> 585,113 </td>     </tr>
+     <tr>     	<td> 09 Nov 2008 </td>         <td> 591,933 </td>     </tr>
+     <tr>     	<td> 16 Nov 2008 </td>         <td> 597,958 </td>     </tr>
+     <tr>     	<td> 23 Nov 2008 </td>         <td> 605,926 </td>     </tr>
+     <tr>     	<td> 30 Nov 2008 </td>         <td> 616,196 </td>     </tr>
+     <tr>     	<td> 07 Dec 2008 </td>         <td> 623,497 </td>     </tr>
+     <tr>     	<td> 14 Dec 2008 </td>         <td> 632,844 </td>     </tr>
+     <tr>     	<td> 21 Dec 2008 </td>         <td> 644,072 </td>     </tr>
+     <tr>     	<td> 28 Dec 2008 </td>         <td> 655,190 </td>     </tr>
+     <tr>     	<td> 04 Jan 2009 </td>         <td> 666,933 </td>     </tr>
+     <tr>     	<td> 11 Jan 2009 </td>         <td> 674,083 </td>     </tr>
+     <tr>     	<td> 18 Jan 2009 </td>         <td> 682,148 </td>     </tr>
+     <tr>     	<td> 25 Jan 2009 </td>         <td> 691,956 </td>     </tr>
+     <tr>     	<td> 01 Feb 2009 </td>         <td> 699,010 </td>     </tr>
+     <tr>     	<td> 08 Feb 2009 </td>         <td> 706,130 </td>     </tr>
+     <tr>     	<td> 15 Feb 2009 </td>         <td> 713,249 </td>     </tr>
+     <tr>     	<td> 22 Feb 2009 </td>         <td> 722,033 </td>     </tr>
+     <tr>     	<td> 01 Mar 2009 </td>         <td> 732,727 </td>     </tr>
+     <tr>     	<td> 08 Mar 2009 </td>         <td> 739,681 </td>     </tr>
+     <tr>     	<td> 15 Mar 2009 </td>         <td> 748,509 </td>     </tr>
+     <tr>     	<td> 22 Mar 2009 </td>         <td> 757,153 </td>     </tr>
+     <tr>     	<td> 29 Mar 2009 </td>         <td> 764,735 </td>     </tr>
+     <tr>     	<td> 05 Apr 2009 </td>         <td> 772,629 </td>     </tr>
+     <tr>     	<td> 12 Apr 2009 </td>         <td> 781,176 </td>     </tr>
+     <tr>     	<td> 19 Apr 2009 </td>         <td> 791,395 </td>     </tr>
+     <tr>     	<td> 26 Apr 2009 </td>         <td> 800,568 </td>     </tr>
+     <tr>     	<td> 03 May 2009 </td>         <td> 809,702 </td>     </tr>
+     <tr>     	<td> 10 May 2009 </td>         <td> 815,996 </td>     </tr>
+     <tr>     	<td> 17 May 2009 </td>         <td> 826,261 </td>     </tr>
+     <tr>     	<td> 24 May 2009 </td>         <td> 832,672 </td>     </tr>
+     <tr>     	<td> 31 May 2009 </td>         <td> 839,951 </td>     </tr>
+     <tr>     	<td> 07 Jun 2009 </td>         <td> 849,769 </td>     </tr>
+     <tr>     	<td> 14 Jun 2009 </td>         <td> 863,398 </td>     </tr>
+     <tr>     	<td> 21 Jun 2009 </td>         <td> 874,936 </td>     </tr>
+     <tr>     	<td> 28 Jun 2009 </td>         <td> 886,266 </td>     </tr>
+     <tr>     	<td> 05 Jul 2009 </td>         <td> 897,568 </td>     </tr>
+     <tr>     	<td> 12 Jul 2009 </td>         <td> 903,538 </td>     </tr>
+     <tr>     	<td> 19 Jul 2009 </td>         <td> 921,617 </td>     </tr>
+     <tr>     	<td> 26 Jul 2009 </td>         <td> 931,614 </td>     </tr>
+     <tr>     	<td> 02 Aug 2009 </td>         <td> 943,032 </td>     </tr>
+     <tr>     	<td> 09 Aug 2009 </td>         <td> 953,414 </td>     </tr>
+     <tr>     	<td> 16 Aug 2009 </td>         <td> 965,104 </td>     </tr>
+     <tr>     	<td> 23 Aug 2009 </td>         <td> 991,650 </td>     </tr>
+     <tr>     	<td> 30 Aug 2009 </td>         <td> 1,015,483 </td>     </tr>
+     <tr>     	<td> 06 Sep 2009 </td>         <td> 1,038,081 </td>     </tr>
+     <tr>     	<td> 13 Sep 2009 </td>         <td> 1,055,267 </td>     </tr>
+     <tr>     	<td> 20 Sep 2009 </td>         <td> 1,065,152 </td>     </tr>
+     <tr>     	<td> 27 Sep 2009 </td>         <td> 1,077,306 </td>     </tr>
+     <tr>     	<td> 04 Oct 2009 </td>         <td> 1,087,512 </td>     </tr>
+     <tr>     	<td> 11 Oct 2009 </td>         <td> 1,098,034 </td>     </tr>
+     <tr>     	<td> 18 Oct 2009 </td>         <td> 1,109,497 </td>     </tr>
      <tr>     	<td> 25 Oct 2009 </td>         <td> Insert </td>     </tr>
      <tr>     	<td> 01 Nov 2009 </td>         <td> Insert </td>     </tr>
      <tr>     	<td> 08 Nov 2009 </td>         <td> Insert </td>     </tr>
