--- a/data/smosh.html
+++ b/data/smosh.html
@@ -218,47 +218,47 @@ body {
      <tr>     	<td> 04 Oct 2009 </td>         <td> 1,087,512 </td>     </tr>
      <tr>     	<td> 11 Oct 2009 </td>         <td> 1,098,034 </td>     </tr>
      <tr>     	<td> 18 Oct 2009 </td>         <td> 1,109,497 </td>     </tr>
-     <tr>     	<td> 25 Oct 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 01 Nov 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 08 Nov 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 15 Nov 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 22 Nov 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 29 Nov 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 06 Dec 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 13 Dec 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 20 Dec 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 27 Dec 2009 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 03 Jan 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 10 Jan 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 17 Jan 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 24 Jan 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 31 Jan 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 07 Feb 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 14 Feb 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 21 Feb 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 28 Feb 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 07 Mar 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 14 Mar 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 21 Mar 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 28 Mar 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 04 Apr 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 11 Apr 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 18 Apr 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 25 Apr 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 02 May 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 09 May 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 16 May 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 23 May 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 30 May 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 06 Jun 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 13 Jun 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 20 Jun 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 27 Jun 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 04 Jul 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 11 Jul 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 18 Jul 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 25 Jul 2010 </td>         <td> Insert </td>     </tr>
-     <tr>     	<td> 01 Aug 2010 </td>         <td> Insert </td>     </tr>
+     <tr>     	<td> 25 Oct 2009 </td>         <td> 1,117,923 </td>     </tr>
+     <tr>     	<td> 01 Nov 2009 </td>         <td> 1,128,098 </td>     </tr>
+     <tr>     	<td> 08 Nov 2009 </td>         <td> 1,138,463 </td>     </tr>
+     <tr>     	<td> 15 Nov 2009 </td>         <td> 1,147,036 </td>     </tr>
+     <tr>     	<td> 22 Nov 2009 </td>         <td> 1,156,270 </td>     </tr>
+     <tr>     	<td> 29 Nov 2009 </td>         <td> 1,165,247 </td>     </tr>
+     <tr>     	<td> 06 Dec 2009 </td>         <td> 1,174,547 </td>     </tr>
+     <tr>     	<td> 13 Dec 2009 </td>         <td> 1,184,640 </td>     </tr>
+     <tr>     	<td> 20 Dec 2009 </td>         <td> 1,200,702 </td>     </tr>
+     <tr>     	<td> 27 Dec 2009 </td>         <td> 1,215,566 </td>     </tr>
+     <tr>     	<td> 03 Jan 2010 </td>         <td> 1,231,747 </td>     </tr>
+     <tr>     	<td> 10 Jan 2010 </td>         <td> 1,243,376 </td>     </tr>
+     <tr>     	<td> 17 Jan 2010 </td>         <td> 1,256,227 </td>     </tr>
+     <tr>     	<td> 24 Jan 2010 </td>         <td> 1,271,278 </td>     </tr>
+     <tr>     	<td> 31 Jan 2010 </td>         <td> 1,283,078 </td>     </tr>
+     <tr>     	<td> 07 Feb 2010 </td>         <td> 1,294,028 </td>     </tr>
+     <tr>     	<td> 14 Feb 2010 </td>         <td> 1,304,635 </td>     </tr>
+     <tr>     	<td> 21 Feb 2010 </td>         <td> 1,316,026 </td>     </tr>
+     <tr>     	<td> 28 Feb 2010 </td>         <td> 1,329,281 </td>     </tr>
+     <tr>     	<td> 07 Mar 2010 </td>         <td> 1,339,441 </td>     </tr>
+     <tr>     	<td> 14 Mar 2010 </td>         <td> 1,350,091 </td>     </tr>
+     <tr>     	<td> 21 Mar 2010 </td>         <td> 1,363,516 </td>     </tr>
+     <tr>     	<td> 28 Mar 2010 </td>         <td> 1,379,005 </td>     </tr>
+     <tr>     	<td> 04 Apr 2010 </td>         <td> 1,396,502 </td>     </tr>
+     <tr>     	<td> 11 Apr 2010 </td>         <td> 1,412,765 </td>     </tr>
+     <tr>     	<td> 18 Apr 2010 </td>         <td> 1,426,915 </td>     </tr>
+     <tr>     	<td> 25 Apr 2010 </td>         <td> 1,441,097 </td>     </tr>
+     <tr>     	<td> 02 May 2010 </td>         <td> 1,455,660 </td>     </tr>
+     <tr>     	<td> 09 May 2010 </td>         <td> 1,469,848 </td>     </tr>
+     <tr>     	<td> 16 May 2010 </td>         <td> 1,483,686 </td>     </tr>
+     <tr>     	<td> 23 May 2010 </td>         <td> 1,498,843 </td>     </tr>
+     <tr>     	<td> 30 May 2010 </td>         <td> 1,518,772 </td>     </tr>
+     <tr>     	<td> 06 Jun 2010 </td>         <td> 1,538,428 </td>     </tr>
+     <tr>     	<td> 13 Jun 2010 </td>         <td> 1,559,246 </td>     </tr>
+     <tr>     	<td> 20 Jun 2010 </td>         <td> 1,574,055 </td>     </tr>
+     <tr>     	<td> 27 Jun 2010 </td>         <td> 1,589,966 </td>     </tr>
+     <tr>     	<td> 04 Jul 2010 </td>         <td> 1,604,912 </td>     </tr>
+     <tr>     	<td> 11 Jul 2010 </td>         <td> 1,622,224 </td>     </tr>
+     <tr>     	<td> 18 Jul 2010 </td>         <td> 1,641,369 </td>     </tr>
+     <tr>     	<td> 25 Jul 2010 </td>         <td> 1,662,280 </td>     </tr>
+     <tr>     	<td> 01 Aug 2010 </td>         <td> 1,690,772 </td>     </tr>
 </table>
 
 </body>
