--- a/data.html
+++ b/data.html
@@ -1,15 +1,25 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Data</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-Data page beta
+    <div class="top-bar">
+        <div class="logo-container">
+            <img src="logo.png" alt="Logo" class="logo">
+        </div>
+        <nav class="navigation">
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="data.html" class="nav-link">Data</a>
+            <a href="top50furries.html" class="nav-link">Top 50 Furries</a>
+        </nav>
+    </div>
+<h1>.</h1>
+<h1>Data page beta</h1>
 
 <br>
-
-	<button id="myButton" class="float-left submit-button" >Smosh</button>
-
+	<button id="myButton" class="float-left submit-button">Smosh</button>
 <script type="text/javascript">
     document.getElementById("myButton").onclick = function () {
         location.href = "https://azaistats.github.io/data/smosh.html";
