--- a/index.html
+++ b/index.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Page Title</title>
+<title>Azai Stats</title>
+<link rel="stylesheet" href="style.css">
 </head>
 <body>
-
-<h1>This is a Heading</h1>
+    <div class="top-bar">
+        <div class="logo-container">
+            <img src="logo.png" alt="Logo" class="logo">
+        </div>
+        <nav class="navigation">
+            <a href="index.html" class="nav-link">Home</a>
+            <a href="data.html" class="nav-link">Data</a>
+            <a href="top50furries.html" class="nav-link">Top 50 Furries</a>
+        </nav>
+    </div>
+<h1>.</h1>
 <p>This is a paragraph.</p>
 
 </body>
