--- a/data/smosh.html
+++ b/data/smosh.html
@@ -11,9 +11,9 @@
             <img src="../logo.png" alt="Logo" class="logo">
         </div>
         <nav class="navigation">
-            <a href="index.html" class="nav-link">Home</a>
-            <a href="data.html" class="nav-link">Data</a>
-            <a href="top50furries.html" class="nav-link">Top 50 Furries</a>
+            <a href="../index.html" class="nav-link">Home</a>
+            <a href="../data.html" class="nav-link">Data</a>
+            <a href="../top50furries.html" class="nav-link">Top 50 Furries</a>
         </nav>
     </div>
 <h1> Smosh </h1>
