--- a/data/smosh.html
+++ b/data/smosh.html
@@ -17,12 +17,12 @@
         </nav>
     </div>
 <h1> Smosh </h1>
-<h4> Data starting from 1 Jan 2006 </h4>
+<h4> Data starting from 20 Nov 2005 </h4>
 <table id="dataTable">
 	<tr>
     <th> Date </th>
     <th> Subscribers </th>
-     </tr>     <tr>     	<td> 01 Jan 2006 </td>         <td> 193 </td>     </tr>
+     </tr>     <tr>     	<td> 20 Nov 2005 </td>         <td> 1 </td>     <tr>     	<td> 27 Nov 2005 </td>         <td> 8 </td>     <tr>     	<td> 04 Dec 2005 </td>         <td> 83 </td>     <tr>     	<td> 11 Dec 2005 </td>         <td> 125 </td>     <tr>     	<td> 18 Dec 2005 </td>         <td> 161 </td>     <tr>     	<td> 25 Dec 2005 </td>         <td> 174 </td>     </tr>     <tr>     	<td> 01 Jan 2006 </td>         <td> 193 </td>     </tr>
      <tr>     	<td> 08 Jan 2006 </td>         <td> 205 </td>     </tr>
      <tr>     	<td> 15 Jan 2006 </td>         <td> 227 </td>     </tr>
      <tr>     	<td> 22 Jan 2006 </td>         <td> 255 </td>     </tr>
