--- a/data/smosh.html
+++ b/data/smosh.html
@@ -323,8 +323,8 @@ function convertTableToGraph(tableId, graphId, options = {}) {
 document.addEventListener('DOMContentLoaded', () => {
     convertTableToGraph('dataTable', 'graph', {
         type: 'line',
-        title: 'Subscriber Growth',
-        label: 'Number of Subscribers'
+        title: 'Subscribers',
+        label: 'Subscribers'
     });
 });
 </script>
