--- a/data/183club.html
+++ b/data/183club.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>AzaiStats | Smosh</title>
+<title>AzaiStats | 183Club</title>
 <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
 <link rel="stylesheet" href="../style.css">
 </head>
