--- a/data/smosh.html
+++ b/data/smosh.html
@@ -12,8 +12,8 @@
         </div>
         <nav class="navigation">
             <a href="../index.html" class="nav-link">Home</a>
-            <a href="../data.html" class="nav-link">Data</a>
-            <a href="../top50furries.html" class="nav-link">Top 50 Furries</a>
+            <a href="../data" class="nav-link">Data</a>
+            <a href="../top50furries" class="nav-link">Top 50 Furries</a>
         </nav>
     </div>
 <h1> Smosh </h1>
