--- a/index.html
+++ b/index.html
@@ -15,8 +15,13 @@
         </nav>
     </div>
 <h1>.</h1>
-<p>This is a paragraph.</p>
-
+<h1>Hey! I'm Azai , and welcome to my website!</h1>
+<br>
+<h2>I'm a statistics based <a class="link" href="https://www.youtube.com/@AzaiStats">YouTuber</a> interested in making data more available to the general public.</h2>
+<br>
+<h2>Here you can find <a style="text-decoration: none;" href="data.html">data</a> and more!</h2>
+<br>
+<br>
 </body>
 </html>
 
