--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-<title>Azai Stats</title>
-<link rel="stylesheet" href="style.css">
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Azai Stats</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="top-bar">
@@ -14,15 +16,7 @@
             <a href="data.html" class="nav-link">Data</a>
         </nav>
     </div>
-<h1>.</h1>
-<h1>Hey! I'm Azai , and welcome to my website!</h1>
-<br>
-<h2>I'm a statistics based <a class="link" href="https://www.youtube.com/@AzaiStats">YouTuber</a> interested in making data more available to the general public.</h2>
-<br>
-<h2>Here you can find <a style="text-decoration: none;" href="data.html">data</a> and more!</h2>
-<br>
-<br>
+
+    <p>This is a paragraph.</p>
 </body>
 </html>
-
-
